@@ -4,5 +4,9 @@
 ```
 --module-path C:\Users\<USER>\...\openjfx-...sdk\lib\ --add-modules javafx.controls,javafx.fxml
 ```
+Concrete example
+```
+--module-path C:\Users\Greta\Downloads\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\ --add-modules javafx.controls,javafx.fxml
+```
 
 ![image](https://user-images.githubusercontent.com/7895269/94984884-a8f83880-0559-11eb-9953-4c5a0017d790.png)
